--- a/discount.html
+++ b/discount.html
@@ -22,7 +22,7 @@
 <br>
 
 <form>
-    <input type="radio" id="multiplication" name="arithmetic" value="times" onclick="chooseOp()"checked>
+    <input type="radio" id="multiplicatio" name="arithmetic" value="times" onclick="chooseOp()"checked>
     <label for="multiply">*</label>
     <br>
     <input type="radio" id="division" name="arithmetic" onclick="chooseOp()" value="divide" checked>
