--- a/musician.html
+++ b/musician.html
@@ -19,12 +19,12 @@
     
     <form>
         <div class="mb-3">
-        <label for="form1_musician" >Enter the secret musician name </label>
-        <input type ="password" id="form1_musician"  name="form1_musician" value="John Lennon"> <br>
+        <label for="form1_musician" class="form-label">Enter the secret musician name </label>
+        <input type ="password" id="form1_musician" class="form-control" name="form1_musician" value="John Lennon"> <br>
     </div>
     <div class="mb-3">
-        <label for="form1_text" >Guess the musician</label>
-        <input type ="text" id="form1_text" name="form1_text"> <br>
+        <label for="form1_text" class="form-label">Guess the musician</label>
+        <input type ="text" id="form1_text" class="form-control" name="form1_text"> <br>
         </div>
     <div class="mb-3">
         <input type="button"  onclick=" checkGuess()" value="Check the guess">
